# hentai-cli

./: Cargo.toml  README.md
src/: main.rs
src/api/: image_downloader.rs  mod.rs  model.rs
src/cli/: mod.rs  model.rs
src/util/: format_url.rs  generate_path_buf.rs  mod.rs
