[package]
name = "hentai-cli"
version = "0.1.0"
authors = ["Ryan Larkin <rlarkin212@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features=["derive"]}
bytes = "0.5"
indicatif = "0.15.0"
